# YetAnotherQuizGame

./: run.sh  skaffold.yaml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/2022-05-06-174219_create_question_and_quiz/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/data/: mod.rs  quiz_data.rs
backend/src/endpoints/: mod.rs  quiz_endpoints.rs
backend/src/model/: mod.rs
backend/src/model/api/: mod.rs  request_types.rs  response_types.rs
backend/src/model/auth/: user.rs
backend/src/model/game_session/: mod.rs  participant.rs
backend/src/model/quiz/: mod.rs  question.rs  quiz.rs
backend/src/shared_state/: client.rs
external_services/: docker-compose.yaml
frontend/: package.json
frontend/src/: App.tsx
k8s/: db.yaml  deployment.yaml  service.yaml
