[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
sea-orm = { version = "0.7.1", features = [
    "sqlx-postgres",
    "runtime-actix-native-tls",
    "macros",
] }
tokio = { version = "1.18.0", features = ["macros", "sync"] }
warp = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
redis = { version = "0.21.5", features = ["tokio-comp"] }
